--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "wheelv3",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build"
-  },
-  "dependencies": {
-    "vue": "3.0.0-rc.1",
-    "vue-router": "4.0.0-beta.3"
-  },
-  "devDependencies": {
-    "@vue/compiler-sfc": "3.0.0-rc.1",
-    "sass": "1.26.10",
-    "vite": "1.0.0-rc.1"
-  }
+	"name": "wheelv3",
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build"
+	},
+	"dependencies": {
+		"vue": "3.0.0-rc.1",
+		"vue-router": "4.0.0-beta.3",
+		"github-markdown-css": "^4.0.0",
+		"marked": "^1.1.1"
+	},
+	"devDependencies": {
+		"@vue/compiler-sfc": "3.0.0-rc.1",
+		"sass": "1.26.10",
+		"vite": "1.0.0-rc.1"
+	}
 }
