--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-	"name": "wheelv3",
+	"name": "wheel3",
 	"version": "0.0.0",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build"
 	},
 	"dependencies": {
+		"github-markdown-css": "4.0.0",
+		"marked": "1.1.1",
+		"prismjs": "1.21.0",
 		"vue": "3.0.0-rc.1",
-		"vue-router": "4.0.0-beta.3",
-		"github-markdown-css": "^4.0.0",
-		"marked": "^1.1.1"
+		"vue-router": "4.0.0-beta.3"
 	},
 	"devDependencies": {
 		"@vue/compiler-sfc": "3.0.0-rc.1",
